# drone-action-predicton

./: .gitignore  README.md  benchmark.py  dataset.py  eval.py  export.py  main.py  pyproject.toml  requirements.txt  trt_benchmark.py
src/: RedisDataloader.py  backbone.py  dataset.py  distributed.py  model.py  params.py  scheduler.py  train.py
tools/: extract_bag_imu_images.py  merge_dataset_splits.py  merge_multimodal_datasets.py  pair_gdy_imu_with_flow.py  prepare_drone_racing_dataset.py  prepare_multimodal_dataset.py  prepare_multimodal_optical_flow.py  prepare_racing_dataset.py  prepare_racing_dataset_enhanced.py  split_gdy_val.py
